# LoRa-ESP32

./: README.md
Hardware/PCB_Satellogic/: Device.lib  Libreria_Proyecto_Satellogic.bak  Libreria_Proyecto_Satellogic.kicad_sym  PCB_Satellogic.kicad_pcb  PCB_Satellogic.kicad_prl  PCB_Satellogic.kicad_pro  PCB_Satellogic.kicad_sch  PCB_Satellogic.net  PCB_Satellogic.sch-bak  PCB_Satellogic.step  PCB_Satellogic.wrl  RF_Module.lib  fp-info-cache  fp-lib-table  sym-lib-table  tp4065_modulo_cargador_de_baterias.bak  ~PCB_Satellogic.kicad_sch.lck
Hardware/PCB_Satellogic/Componentes STP/: E22-900M30S.SLDPRT  E22-900M30S_LoRa_smd.kicad_mod  MT3608-DCDC_boost.wrl
Hardware/PCB_Satellogic/Foot_print_devices_lib/: E22-900M30S_LoRa_smd.kicad_mod  TP4056.kicad_mod  (+2 more)
Hardware/PCB_Satellogic_2/: Libreria_Proyecto_Satellogic.bak  PCB_Satellogic_2-cache.lib  PCB_Satellogic_2.kicad_pcb  PCB_Satellogic_2.kicad_pcb-bak  PCB_Satellogic_2.kicad_prl  PCB_Satellogic_2.kicad_pro  PCB_Satellogic_2.kicad_sch  PCB_Satellogic_2.net  PCB_Satellogic_2.pro  PCB_Satellogic_2.sch  fp-lib-table  sym-lib-table
Unidirec_comm_satelites/: .cproject  .project  sdkconfig
Unidirec_comm_satelites/main/: .cproject  .project  CMakeLists.txt  main.c
Unidirec_comm_satelites/main/Drivers/lib/: API_E22.h  API_Firebase.h  API_Json.h  API_Time.h  API_USB.h  API_WiFi.h  API_delay.h  MEF.h  main.h
Unidirec_comm_satelites/main/Drivers/src/: API_E22.c  API_Firebase.c  API_Json.c  API_Time.c  API_USB.c  API_WiFi.c  API_delay.c  E22_ESP32_port.c  MEF.c
Unidirec_comm_satelites/main/E22_test/: E22_test_.c  E22_test_.h
(+5 files in other folders)
